added id for invite

--- a/programs/xrchive/index.html
+++ b/programs/xrchive/index.html
@@ -72,7 +72,7 @@
 
         </div>
         </section>
-        <section class="orange-light">
+        <section id="invitation" class="orange-light">
         <figure><img src="/images/heros/xrchive-hero-1.png" alt="XRchive" /></figure>
         <div class="inner">
           <h2 style="margin-bottom:0;">
