added nov 3 event

--- a/programs/xrchive/index.html
+++ b/programs/xrchive/index.html
@@ -65,7 +65,12 @@
             <li>Places, communities, culture, memories, and future vision of the Albina region in N/NE Portland;</li>
             <li>A virtual memorial/meditation/reflection amongst previously unmarked graves for Chinese immigrant railroad workers in SE Portland.</li>
           </ul>
-          <h3>Check the Invitations below for specific dates and times.</h3>
+          <br>
+          <h2>Live Event November 3rd</h2>
+        <p><strong>What:</strong> <a href="https://bit.ly/cetistream">YouTube Live</a> Conversation about the CETI XRchive Project<br>
+        <strong>When:</strong> Wednesday November 3rd, 6pm Pacific<br>
+        <strong>Where:</strong> CETI's YouTube Channel: <a href="https://bit.ly/cetistream">https://bit.ly/cetistream</a></p>
+          <p><a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLSe26BZImJIaqjoFNtK4GAAUbESK4OT-6YYxffjUfK2QGTFA7g/viewform">Register</a> &nbsp;<a href="#invitation" class="button">Future Events</a></p>
           <br><br>
 
           
