--- a/programs/constellations/index.html
+++ b/programs/constellations/index.html
@@ -2,11 +2,185 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CETI Constellations</title>
+    <!-- Google Tag Manager -->
+    <script>
+      ;(function (w, d, s, l, i) {
+        w[l] = w[l] || []
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" })
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : ""
+        j.async = true
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl
+        f.parentNode.insertBefore(j, f)
+      })(window, document, "script", "dataLayer", "GTM-5SR4C6X")
+    </script>
+    <!-- End Google Tag Manager -->
+    <title>CETI | Constellations February 2022</title>
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/x-icon" />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style" />
+
+    <link rel="stylesheet" href="/css/style.css" />
+    <meta property="og:title" content="Ceti Institute" />
+    <meta property="og:description" content="CETI Institute offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future." />
+    <meta property="og:image" content="http://ceti.institute/images/brand/ceti_logo-orange.png" />
+    <meta property="og:url" content="https://ceti.institute" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="og:site_name" content="CETI Institute" />
+    <meta name="twitter:image:alt" content="CETI Institute" />
+    <meta name="twitter:site" content="@ceti_institute" />
   </head>
-  <body>
-    <h1>Winter Light Festival</h1>
+
+  <body id="gof-page" class="subpage">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5SR4C6X" height="0" width="0" style="display: none; visibility: hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <header class="branding">
+      <h1 id="logo">
+        <a href="/index.html"><img src="/images/logos/ceti-logo.svg" alt="CETI" /></a>
+      </h1>
+      <nav role="navigation" class="navtwo" id="topnavlist"></nav>
+      <nav role="navigation" class="navmobile" id="mobilenavlist"></nav>
+    </header>
+    <main>
+      <section class="light">
+        <figure><img src="/images/heros/wlf-filmreel.png" alt="Constellations at PDX Winter Light Festival" /></figure>
+        <div class="inner">
+          <h1>Constellations</h1>
+          <h2>CETI at Portland Winter Light Festival</h2>
+
+          <p>Each year CETI gathers a group of artists, technologists, and hackers gathered at the Riveter, for a weekend of collaborative creative experiments - an exciting collision of people, practices, and ideas to bring unique interactive installations, immersive experiences, and magical performances to life.</p>
+          <h2>Event</h2>
+          February 11th and 12th at Portland State University<br />
+          Details to come.
+          <p><a href="mailto:hello@ceti.institute?constellations" class="button light">Keep Me Informed</a></p>
+          <br /><br />
+        </div>
+      </section>
+      <section id="invitation" class="constellations">
+        <figure><img src="/images/heros/wlf-orb.png" alt="XRchive" /></figure>
+        <div class="inner">
+          <h2>Invitation</h2>
+          <p>Join us at the end of January as artists, technologists, and hackers gather teams for a weekend of collaborative creative experiments.</p>
+          <p><a href="mailto:hello@ceti.institute?constellations" class="button light">Keep Me Informed</a></p>
+        </div>
+      </section>
+      <section class="light">
+        <figure><img src="/images/heros/wlf-ceti-blue-green.png" /></figure>
+        <div class="inner">
+          <h2>Past Partners, Sponsors, and Donors</h2>
+          <p>We are ramping up for this year's winter Lights Festival. We'll need donations of technology, food, beverages, and money. Donations are a great way to get involved with CETI's projects and events.</p>
+          <p><a class="button" href="mailto:hello@ceti.institute">Support the Project</a></p>
+          <div class="hackathon__partners_container">
+            <ul class="hackathon__partners_list">
+              <li class="hackathon__partner_item">
+                <a href="https://kexhotels.com/" class="hackathon__partner_link" target="_blank">
+                  <img src="/wlf2020/images/partners/kex.png" alt="Kex Hotels" class="hackathon__partner_image" />
+                </a>
+              </li>
+              <li class="hackathon__partner_item">
+                <a href="https://theriveter.co/" class="hackathon__partner_link" target="_blank">
+                  <img src="/wlf2020/images/partners/riveter.svg" alt="Partner Logo" class="hackathon__partner_image" />
+                </a>
+              </li>
+              <li class="hackathon__partner_item">
+                <a href="https://www.1111supply.com/" class="hackathon__partner_link" target="blank">
+                  <img src="/wlf2020/images/partners/1111-ig-logo.jpg" alt="Partner Logo" class="hackathon__partner_image" />
+                </a>
+              </li>
+              <li class="hackathon__partner_item">
+                <a href="https://www.wk.com/" class="hackathon__partner_link" target="_blank">
+                  <img src="/wlf2020/images/partners/wieden.gif" alt="Wieden+Kennedy" class="hackathon__partner_image" />
+                </a>
+              </li>
+              <li class="hackathon__partner_item">
+                <a href="https://www.pgefoundation.org/?_ga=2.197938922.492109384.1580789259-772239367.1580789259" class="hackathon__partner_link" target="_blank">
+                  <img src="/wlf2020/images/partners/pge-wide.jpeg" alt="Portland General Electric" class="hackathon__partner_image" />
+                </a>
+              </li>
+              <li class="hackathon__partner_item">
+                <a href="https://oregonfilm.org/" class="hackathon__partner_link" target="_blank">
+                  <img src="/wlf2020/images/partners/oregon-film.gif" alt="Oregon Film" class="hackathon__partner_image" />
+                </a>
+              </li>
+              <li class="hackathon__partner_item">
+                <a href="https://www.pjrc.com/" class="hackathon__partner_link" target="_blank">
+                  <img src="/wlf2020/images/partners/pjrc.jpg" alt="PJRC" class="hackathon__partner_image" />
+                </a>
+              </li>
+              <li class="hackathon__partner_item">
+                <a href="http://www.hhboiledbagels.com/" class="hackathon__partner_link" target="_blank">
+                  <img src="/wlf2020/images/partners/henry-higgins-logo.png" alt="Henry Higgins" class="hackathon__partner_image" />
+                </a>
+              </li>
+              <li class="hackathon__partner_item">
+                <a href="http://reverendnatshardcider.com/" class="hackathon__partner_link" target="_blank">
+                  <img src="/wlf2020/images/partners/reverendnats.png" alt="Reverend Nat's" class="hackathon__partner_image" />
+                </a>
+              </li>
+
+              <li class="hackathon__partner_item">
+                <a href="http://www.uprightbrewing.com/" class="hackathon__partner_link" target="_blank">
+                  <img src="/wlf2020/images/partners/uprightbrewing.png" alt="Upright Brewing" class="hackathon__partner_image" />
+                </a>
+              </li>
+              <li class="hackathon__partner_item stacks">
+                <a href="https://www.thestackscoffeehouse.com/" class="hackathon__partner_link" target="_blank">
+                  <img src="/wlf2020/images/partners/thestacks.png" alt="The Stacks Coffeehouse" class="hackathon__partner_image" />
+                </a>
+              </li>
+              <li class="hackathon__partner_item">
+                <a href="http://www.psu.gd/" class="hackathon__partner_link" target="_blank">
+                  <img src="/wlf2020/images/partners/psugd.svg" alt="PSU Graphic Design" style="height: 100px" class="hackathon__partner_image" />
+                </a>
+              </li>
+              <li class="hackathon__partner_item">
+                <a href="https://www.spielmanbagels.com/" class="hackathon__partner_link" target="_blank">
+                  <img src="/wlf2020/images/partners/spielmans.jpg" alt="Spielman Bagels" class="hackathon__partner_image" />
+                </a>
+              </li>
+              <li class="hackathon__partner_item">
+                <a href="https://www.flickerbox.com/" class="hackathon__partner_link" target="_blank">
+                  <img src="/wlf2020/images/partners/flickerbox_mark_logotype01.png" alt="Flickerbox. Inc." class="hackathon__partner_image" />
+                </a>
+              </li>
+              <li class="hackathon__partner_item">
+                <a href="https://invisiblethread.co/" class="hackathon__partner_link" target="_blank">
+                  <img src="/wlf2020/images/partners/invisible-thread.gif" alt="Invisible Thread" class="hackathon__partner_image" />
+                </a>
+              </li>
+              <li class="hackathon__partner_item">
+                <a href="https://www.cremabakery.com/home" class="hackathon__partner_link" target="_blank">
+                  <img src="/wlf2020/images/partners/crema.gif" alt="Crema Bakery" class="hackathon__partner_image" />
+                </a>
+              </li>
+              <li class="no-bdrd"></li>
+              <li class="no-bdrd"></li>
+            </ul>
+          </div>
+          <div class="hackathon__partners_additional">Equipment, technology and materials are provided in part by: <a href="https://www.intel.com/content/www/us/en/corporate-responsibility/intel-in-oregon.html" target="_blank">Intel</a>, <a href="https://metroeast.org/" target="_blank">MetroEast Community Media</a>, <a href="https://www.opensignalpdx.org/" target="_blank">Open Signal</a>, The Wiz, <a href="https://www.freegeek.org/" target="_blank">Free Geek</a>, <a href="https://www.pjrc.com/" target="_blank">PJRC</a>, <a href="https://shashijain.co/about/" target="_blank">Shashi Jain</a>, <a href="https://www.torch.app/" target="_blank">Paul Reynolds</a>, and <a href="https://www.pica.org/" target="_blank">PICA</a> and many of the participants and members of the CETI community. <br /><br /></div>
+        </div>
+      </section>
+    </main>
+    <footer id="contact">
+      <div></div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+
+    <script src="/js/nav.js"></script>
+    <script src="/js/script.js"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-CSLJ4LHBM2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || []
+      function gtag() {
+        dataLayer.push(arguments)
+      }
+      gtag("js", new Date())
+      gtag("config", "G-CSLJ4LHBM2")
+    </script>
   </body>
 </html>
