added xrchive block to programs

--- a/programs/constellations/index.html
+++ b/programs/constellations/index.html
@@ -71,7 +71,7 @@
         <figure><img src="/images/heros/wlf-ceti-blue-green.png" /></figure>
         <div class="inner">
           <h2>Past Partners, Sponsors, and Donors</h2>
-          <p>We are ramping up for this year's winter Lights Festival. We'll need donations of technology, food, beverages, and money. Donations are a great way to get involved with CETI's projects and events.</p>
+          <p>We are ramping up for this year's Portland Winter Lights Festival. We'll need donations of technology, food, beverages, and funds. Are you a Portland Business interested in supporting us? Donations are a great way to get involved with CETI's projects and events.</p>
           <p><a class="button" href="mailto:hello@ceti.institute">Support the Project</a></p>
           <div class="hackathon__partners_container">
             <ul class="hackathon__partners_list">
