--- a/programs/index.html
+++ b/programs/index.html
@@ -61,6 +61,10 @@
         </div>
       </section>
       <section class="programs-grid">
+        <article class="xr">
+          <a href="/programs/xrchive"><img src="/images/thumbs/xrchive-sq.png" /></a>
+          <h3><a href="/programs/xrchive">XRchive</a></h3>
+        </article>
         <article class="e-tech">
           <a href="/programs/enchanted-tech"><img src="/images/thumbs/enchanted-tech-sq.png" /></a>
           <h3><a href="/programs/enchanted-tech">Enchanted Tech</a></h3>
@@ -80,9 +84,7 @@
       </section>
       <section>
         <a href="https://mirathefuture.org" target="_blank"><img src="/images/heros/mira-hero.png" /></a>
-        <div class="inner">
-          
-        </div>
+        <div class="inner"></div>
       </section>
     </main>
     <footer id="contact">
