--- a/programs/xrchive/index.html
+++ b/programs/xrchive/index.html
@@ -50,10 +50,7 @@
         <div class="inner">
           <h1>XRchive</h1>
           <h2>Creating Social Documentary Experiences</h2>
-          <!-- <p>XRchive is a social documentary project for communities to tell stories in place and in their voices through interdisciplinary collaboration with a diverse community of artists, technologists, and community partners. Through our XR storytelling tours/apps, we will paint the landscape with videos, sounds, and images focussed on themes of (in)justice, memory, and imagination.</p>
-          <p>Our first prototype series of tours/stories will focus on the theme of migrations and displacements</p>
-
-          <p>XRchive is a series of XR storytelling experiences of migrations and displacement  created in interdisciplinary collaboration with a diverse community of artists, technologists, and community partners, for people to experience as they wander around Portland, unearthing hidden stories and provocations.  </p>  -->
+          
 
           <p>Through XR experiences, we will infuse the Portland landscape with vivid experiences that challenge and subvert systems and symbols of power, inspiring conversations in place around a reimagined future for Portland. These might include videos, sound bytes, depictions of under-represented characters, hazy memories, and imagined futures, wielding these powerful new technologies as an engine for collective memory and imagination.</p>
 
@@ -67,9 +64,10 @@
           </ul>
           <br>
           <h2>Live Event November 3rd</h2>
-        <p><strong>What:</strong> <a href="https://bit.ly/cetistream">YouTube Live</a> Conversation about the CETI XRchive Project<br>
+        <p><strong>What:</strong> <a href="https://bit.ly/cetistream" target="_blank">YouTube Live</a> Conversation about the CETI XRchive Project<br>
         <strong>When:</strong> Wednesday November 3rd, 6pm Pacific<br>
-        <strong>Where:</strong> CETI's YouTube Channel: <a href="https://bit.ly/cetistream">https://bit.ly/cetistream</a></p>
+        <strong>Where:</strong> CETI's YouTube Channel: <a href="https://bit.ly/cetistream" target="_blank">https://bit.ly/cetistream</a><br>
+      <strong>Details</strong> <a href="https://docs.google.com/presentation/d/1KOIw5AHoam_Okvya9sfHenOe9umMIs0jIlG4tha7Xcg/edit?usp=sharing" target="_blank">Google Slide Deck</a></p>
           <p><a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLSe26BZImJIaqjoFNtK4GAAUbESK4OT-6YYxffjUfK2QGTFA7g/viewform">Register</a> &nbsp;<a href="#invitation" class="button">Future Events</a></p>
           <br><br>
 
