--- a/programs/xrchive/index.html
+++ b/programs/xrchive/index.html
@@ -23,8 +23,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style" />
 
     <link rel="stylesheet" href="/css/style.css" />
-    <meta property="og:title" content="Ceti Institute" />
-    <meta property="og:description" content="CETI Institute offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future." />
+    <meta property="og:title" content="Ceti" />
+    <meta property="og:description" content="CETI offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future." />
     <meta property="og:image" content="http://ceti.institute/images/brand/ceti_logo-orange.png" />
     <meta property="og:url" content="https://ceti.institute" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -50,7 +50,7 @@
         <div class="inner">
           <h1>XRchive</h1>
           <h2>Creating Social Documentary Experiences</h2>
-          
+          <p><a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLSe26BZImJIaqjoFNtK4GAAUbESK4OT-6YYxffjUfK2QGTFA7g/viewform">Register</a></p>
 
           <p>Through XR experiences, we will infuse the Portland landscape with vivid experiences that challenge and subvert systems and symbols of power, inspiring conversations in place around a reimagined future for Portland. These might include videos, sound bytes, depictions of under-represented characters, hazy memories, and imagined futures, wielding these powerful new technologies as an engine for collective memory and imagination.</p>
 
@@ -68,7 +68,7 @@
         <strong>When:</strong> Wednesday November 3rd, 6pm Pacific<br>
         <strong>Where:</strong> CETI's YouTube Channel: <a href="https://bit.ly/cetistream" target="_blank">https://bit.ly/cetistream</a><br>
       <strong>Details</strong> <a href="https://docs.google.com/presentation/d/1KOIw5AHoam_Okvya9sfHenOe9umMIs0jIlG4tha7Xcg/edit?usp=sharing" target="_blank">Google Slide Deck</a></p>
-          <p><a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLSe26BZImJIaqjoFNtK4GAAUbESK4OT-6YYxffjUfK2QGTFA7g/viewform">Register</a> &nbsp;<a href="#invitation" class="button">Future Events</a></p>
+          <p><a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLSe26BZImJIaqjoFNtK4GAAUbESK4OT-6YYxffjUfK2QGTFA7g/viewform">Register for XRchive</a> &nbsp;<a href="#invitation" class="button">Future Events</a></p>
           <br><br>
 
           
