removed institute from all mentions of ceti institute

--- a/community/index.html
+++ b/community/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style" />
     <link rel="stylesheet" href="/css/style.css" />
-    <meta property="og:title" content="Ceti Institute" />
-    <meta property="og:description" content="CETI Institute's community brings together scientists, artists, educators, and researchers to tackle social and environmental issues using cresative technologies. We are proudly sponsored by the Collins Foundation, the PGE Foundation, PSU's School or Art + Design, the Mt. Hood Regulatory Committee and Open Signal PDX." />
+    <meta property="og:title" content="Ceti" />
+    <meta property="og:description" content="CETI's community brings together scientists, artists, educators, and researchers to tackle social and environmental issues using cresative technologies. We are proudly sponsored by the Collins Foundation, the PGE Foundation, PSU's School or Art + Design, the Mt. Hood Regulatory Committee and Open Signal PDX." />
     <meta property="og:image" content="http://ceti.institute/images/brand/ceti_logo-orange.png" />
     <meta property="og:url" content="https://ceti.institute" />
     <meta name="twitter:card" content="/images/promo/enchanted-tech/enchantedtech-postcard-EN5x7.png" />
