--- a/gallery-of-the-future/index.html
+++ b/gallery-of-the-future/index.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="/css/style.css" />
-    <meta property="og:title" content="Ceti Institute" />
-    <meta property="og:description" content="CETI Institute offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future." />
+    <meta property="og:title" content="Ceti" />
+    <meta property="og:description" content="CETI offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future." />
     <meta property="og:image" content="http://ceti.institute/images/brand/ceti_logo-orange.png" />
     <meta property="og:url" content="https://ceti.institute" />
     <meta name="twitter:card" content="summary_large_image" />
