--- a/programs/enchanted-tech/index.html
+++ b/programs/enchanted-tech/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style" />
     <link rel="stylesheet" href="/css/style.css" />
 
-    <meta property="og:title" content="Ceti Institute" />
+    <meta property="og:title" content="Ceti" />
     <meta property="og:description" content="Join CETI's Summer Festival of learning and creative experiments focused on wearables, costumes, masks, avatars and cosplay using creative technology, electronics, craft, sewing, music, and art. Our accessible, diy approach to tech is personal, and community-driven, combining the imagination, everyday materials, craft techniques, and cutting-edge technologies." />
     <meta property="og:image" content="http://ceti.institute/images/brand/ceti_logo-orange.png" />
     <meta property="og:url" content="https://ceti.institute" />
