--- a/wlf2020/projects.html
+++ b/wlf2020/projects.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <meta name="description" content="CETI Institute, a creative technology non-profit, will be participating the the Portland Winter Light Festival February 8th, 2020 at Kex Hostel, 11:11 Supply, and The Riveter in Portland, OR." />
+    <meta name="description" content="CETI, a creative technology non-profit, will be participating the the Portland Winter Light Festival February 8th, 2020 at Kex Hostel, 11:11 Supply, and The Riveter in Portland, OR." />
     <title>CETI Winter Light Festival 2020 | Portland, OR</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
