--- a/programs/enchanted-tech/streaming-schedule.html
+++ b/programs/enchanted-tech/streaming-schedule.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style" />
     <link rel="stylesheet" href="/css/style.css" />
 
-    <meta property="og:title" content="Ceti Institute" />
+    <meta property="og:title" content="Ceti" />
     <meta property="og:description" content="Join CETI's Summer Festival of learning and creative experiments focused on wearables, costumes, masks, avatars and cosplay using creative technology, electronics, craft, sewing, music, and art. Our accessible, diy approach to tech is personal, and community-driven, combining the imagination, everyday materials, craft techniques, and cutting-edge technologies." />
     <meta property="og:image" content="http://ceti.institute/images/brand/ceti_logo-orange.png" />
     <meta property="og:url" content="https://ceti.institute" />
@@ -31,48 +31,46 @@
         <figure><img src="/images/heros/enchantedtechbanner3.png" alt="Enchanted Tech Summer Workshop" /></figure>
         <div class="inner">
           <h1>ENCHANTED TECHNOLOGY: STREAM SCHEDULE</h1>
-          
-<p>Streamed live on our <a href="https://bit.ly/cetistream">CETI YouTube channel</a>(captioned video available eventually). Updates
-on <a href="">twitter</a> and <a href="">instagram</a> Share your creations with us and use the tag #cetienchantedtech</p>
-<p><a href="/programs/enchanted-tech" class="button">Details</a> ms/enchanted-tech. Sign up for the newsletter
-to hear about future programs.
 
-<h3>July 29, 2021. 10:00am – 12:00pm (workshop)</h3>
-Hacking a Glove: Basic Electronics and Sewable Circuits | Helen Leigh
+          <p>Streamed live on our <a href="https://bit.ly/cetistream">CETI YouTube channel</a>(captioned video available eventually). Updates on <a href="">twitter</a> and <a href="">instagram</a> Share your creations with us and use the tag #cetienchantedtech</p>
+          <p><a href="/programs/enchanted-tech" class="button">Details</a> ms/enchanted-tech. Sign up for the newsletter to hear about future programs.</p>
 
-<h3>July 30, 2021. 10:00am – 12:00pm (workshop)</h3>
-Art with Robots | Justin Patrizi
+          <h3>July 29, 2021. 10:00am – 12:00pm (workshop)</h3>
+          Hacking a Glove: Basic Electronics and Sewable Circuits | Helen Leigh
 
-<h3>August 2, 2021. 10:00am – 12:00pm (workshop)</h3>
-Block Coding on the Circuit Playground Express | Helen Leigh
+          <h3>July 30, 2021. 10:00am – 12:00pm (workshop)</h3>
+          Art with Robots | Justin Patrizi
 
-<h3>August 3, 2021. 10:00am – 12:00pm (workshop)</h3>
-SonicWear Part 1: Capacitive Touch Keyboard | Darcy Neal + Francesca Frattaroli
+          <h3>August 2, 2021. 10:00am – 12:00pm (workshop)</h3>
+          Block Coding on the Circuit Playground Express | Helen Leigh
 
-<h3>August 3, 2021. 5:00pm – 6:00pm (Artist/Technologist/Inventor conversation)</h3>
-Making Music. Once Removed. | Scott Garner
+          <h3>August 3, 2021. 10:00am – 12:00pm (workshop)</h3>
+          SonicWear Part 1: Capacitive Touch Keyboard | Darcy Neal + Francesca Frattaroli
 
-<h3>August 4, 2021. 10:00am – 12:00pm (workshop)</h3>
-SonicWear Part 2: DIY Soft-Speakers | Darcy Neal + Francesca Frattaroli
+          <h3>August 3, 2021. 5:00pm – 6:00pm (Artist/Technologist/Inventor conversation)</h3>
+          Making Music. Once Removed. | Scott Garner
 
-<h3>August 4, 2021. 5:00pm – 6:00pm (Artist/Technologist/Inventor conversation)</h3>
-Show and Tell: Inspiration | Shashi Jain
+          <h3>August 4, 2021. 10:00am – 12:00pm (workshop)</h3>
+          SonicWear Part 2: DIY Soft-Speakers | Darcy Neal + Francesca Frattaroli
 
-<h3>August 5, 2021. 10:00am – 12:00pm (workshop)</h3>
-Light and Color Wizardry | Justin Patrizi
+          <h3>August 4, 2021. 5:00pm – 6:00pm (Artist/Technologist/Inventor conversation)</h3>
+          Show and Tell: Inspiration | Shashi Jain
 
-<h3>August 5, 2021. 2:30pm – 3:30pm (Artist/Technologist/Inventor Conversation)</h3>
-Digital Fabrication for Wearable Design | Sophy Wong
+          <h3>August 5, 2021. 10:00am – 12:00pm (workshop)</h3>
+          Light and Color Wizardry | Justin Patrizi
 
-<h3>August 5, 2021. 3:45pm – 4:45pm (Artist/Technologist/Inventor Conversation)</h3>
-The Body as Interface: Movement Driven & Wearable Technology | Crystal Cortez
-<h3>August 5, 2021. 5:00pm – 6:00pm (Artist/Technologist/Inventor Conversation)</h3>
-Keep Moving Forward | Jorvon Moss
-<h3>August 6, 2021. 10:00pam – 11:00am (Artist/Technologist/Inventor Conversation)</h3>
-Building a Wearable Tech Fashion Brand | Dr Kitty Yeung
+          <h3>August 5, 2021. 2:30pm – 3:30pm (Artist/Technologist/Inventor Conversation)</h3>
+          Digital Fabrication for Wearable Design | Sophy Wong
 
-<h3>To Be Scheduled. (workshop)</h3>
-Digital Dressup and Virtual Worlds: An Intro to Spark AR for Custom Mobile Filters | Zack Marlow-McCarthy
+          <h3>August 5, 2021. 3:45pm – 4:45pm (Artist/Technologist/Inventor Conversation)</h3>
+          The Body as Interface: Movement Driven & Wearable Technology | Crystal Cortez
+          <h3>August 5, 2021. 5:00pm – 6:00pm (Artist/Technologist/Inventor Conversation)</h3>
+          Keep Moving Forward | Jorvon Moss
+          <h3>August 6, 2021. 10:00pam – 11:00am (Artist/Technologist/Inventor Conversation)</h3>
+          Building a Wearable Tech Fashion Brand | Dr Kitty Yeung
+
+          <h3>To Be Scheduled. (workshop)</h3>
+          Digital Dressup and Virtual Worlds: An Intro to Spark AR for Custom Mobile Filters | Zack Marlow-McCarthy
 
           <h3 class="caps">Share Your Experience</h3>
           <p>Have images to share? Tag them with <strong>#cetienchantedtech</strong></p>
