added video reel

--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -89,7 +89,7 @@
                 <a href="https://www.eventbrite.com/e/constellations-tickets-87030946905" target="blank" class="button">Attend the Show</a>
               </p>
               <div class="location">
-                <p><strong>We'll be sharing our projects at the following locations:</strong></p>
+                <p><strong>CETI Constellations projects were shared at the following locations:</strong></p>
                 <ul class="location__list">
                   <li class="location__list_item">
                     <a href="http://theriveter.co" class="location__list_link"><img src="images/riveter_photo.jpg" alt="The Riveter Co-Working Space in Portland OR" /></a>
@@ -114,6 +114,9 @@
               </div>
 
               <p>Questions? Contact us <a href="mailto:contact@ceti.institute">contact@ceti.institute</a></p>
+              <h2>Project Reel from 2020</h2>
+              <div style="padding: 56.25% 0 0 0; position: relative"><iframe src="https://player.vimeo.com/video/644497347?h=15237b2ed8&autoplay=1&title=0&byline=0&portrait=0" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div>
+              <script src="https://player.vimeo.com/api/player.js"></script>
               <p>
                 <a href="https://www.pdxwlf.com/" target="_blank"><img src="images/PDXWLF-RipplesLogo-2020-Black.png" alt="Portland Winter Light Festival" class="wlflogo" /></a>
               </p>
