--- a/programs/constellations/index.html
+++ b/programs/constellations/index.html
@@ -52,6 +52,8 @@
           <h2>CETI at Portland Winter Light Festival</h2>
 
           <p>Each year CETI gathers a group of artists, technologists, and hackers gathered at the Riveter, for a weekend of collaborative creative experiments - an exciting collision of people, practices, and ideas to bring unique interactive installations, immersive experiences, and magical performances to life.</p>
+          <p>Previous Work</p>
+          <div style="padding:56.25% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/644497347?h=15237b2ed8&autoplay=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
           <h2>Event</h2>
           February 11th and 12th at Portland State University<br />
           Details to come.
