added miro board invite

--- a/programs/xrchive/index.html
+++ b/programs/xrchive/index.html
@@ -71,6 +71,7 @@
         <p><strong>What:</strong> Virtual drop-in sessions on Zoom (<a href="https://docs.google.com/forms/d/e/1FAIpQLSe26BZImJIaqjoFNtK4GAAUbESK4OT-6YYxffjUfK2QGTFA7g/viewform" target="_blank">register</a> for zoom link). Meet other participants, share ideas, ask questions.<br>
         <strong>When:</strong> We will have virtual drop in sessions on <strong>November 15th, 5:30 - 6:30pm</strong> and <strong>November 16th, 12 - 1pm.</strong><br>
         
+        <p><a href="https://miro.com/welcomeonboard/UEZ0YW91NTNFdUpnRlFYRFA0eGFjS08xM1lGQjdOcDVXa0J5ODFhV2ZkdGxtd0RnSHNYZlBlc0d1blU3TGZyOXwzMDc0NDU3MzQ2Nzc2NTE5MTgz?invite_link_id=497831437622"><img src="/images/logos/miro-logo.png" class="logo"><br>Project Board</a></p>
       
           <p><a class="button" href="https://docs.google.com/forms/d/e/1FAIpQLSe26BZImJIaqjoFNtK4GAAUbESK4OT-6YYxffjUfK2QGTFA7g/viewform" target="_blank">Register for XRchive</a> &nbsp;<a href="#invitation" class="button">Future Events</a></p>
           <br><br>
