added new constellations links

--- a/programs/constellations/index.html
+++ b/programs/constellations/index.html
@@ -46,7 +46,7 @@
     </header>
     <main>
       <section class="light">
-        <figure><img src="/wlf2020/images/banner.jpg" alt="Constellations at PDX Winter Light Festival" /></figure>
+        <figure style="max-height:400px;overflow:hidden;"><img src="/images/heros/constellations-hero.png" alt="Constellations at PDX Winter Light Festival" /></figure>
         <div class="inner">
           <h1>Constellations</h1>
           <h2>At Portland Winter Light Festival</h2>
