--- a/programs/index.html
+++ b/programs/index.html
@@ -78,8 +78,8 @@
           <h3><a href="/device-sharing">Device Sharing</a></h3>
         </article>
         <article>
-          <a href="/wlf2020"><img src="/images/thumbs/wlf-sq.png" /></a>
-          <h3><a href="/wlf2020">Constellations</a></h3>
+          <a href="/programs/constellations"><img src="/images/thumbs/wlf-sq.png" /></a>
+          <h3><a href="/programs/constellations">Constellations</a></h3>
         </article>
       </section>
       <section>
