--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 								</div>
 								
 							</section>
-								<section class="light" style="background-color: #E7FCE9;">
+								<section class="e-tech-blue">
 									<figure><a href="/programs/enchanted-tech"><img src="/images/heros/enchantedtechbanner.png" alt="Enchanted Tech"></a></figure>
 									<div class="inner">
 										<h2>Enchanted Tech</h2>
