--- a/index.html
+++ b/index.html
@@ -86,20 +86,23 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 										<h3>Creating Social Documentary Experiences</h3>
 										<p>CETI and our partners will collaborate with local communities to create poignant and powerful XR experiences of memory and imagination. We focus on two main sets of experiences emphasizing themes of migrations and displacements, of social and systemic injustice/exclusion/racism/erasure, and of future possibility. They are:</p></p>
 										<p><a href="/programs/xrchive" class="button">Find Out More</a></p><br>
-										<!-- <h2>Invitation to Create</h2>
+										<h2>Invitation to Create</h2>
 									<h3>Creating Social Documentary Experiences</h3>
 									<article class="grid-two">
 										<div>
 										<p>Date and time<br>
-										Friday, December 3, 2021<br>1:00 PM - 4:00 PM PST</p>
+										Friday, December 3, 2021<br>
+										In person at Ceti Labs<br>
+										1:00 PM - 4:00 PM PST</p>
 										</div>
 										<div>
 										<p>Date and time<br>
-										Saturday, December 4, 2021<br>1:00 PM - 4:00 PM PST</p>
+										Saturday, December 4, 2021<br>Virtual Zoom meeting<br>
+										1:30 PM - 3:30 PM PST</p>
 										</div>
 									</article>
 								
-									<p><a href="/programs/xrchive/" class="button">Find Out More</a></p> -->
+									<p><a href="/programs/xrchive/#invitation" class="button">Sign Up</a></p>
 
 									</div>
 								</section>
