--- a/programs/xrchive/index.html
+++ b/programs/xrchive/index.html
@@ -62,6 +62,7 @@
             <li>Places, communities, culture, memories, and future vision of the Albina region in N/NE Portland;</li>
             <li>A virtual memorial/meditation/reflection amongst previously unmarked graves for Chinese immigrant railroad workers in SE Portland.</li>
           </ul>
+          <p><a href="#invitation" class="button">Create with us December 3rd or 4th</a></p>
           <br>
           <h3>Watch An Introduction Video By CETI Members</h3>
           <iframe width="560" height="315" src="https://www.youtube.com/embed/dxi9LiGLsRE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -80,9 +81,9 @@
 
         </div>
         </section>
-        <section id="invitation" class="orange-light">
+        <section class="orange-light">
         <figure><img src="/images/heros/xrchive-hero-1.png" alt="XRchive" /></figure>
-        <div class="inner">
+        <div  id="invitation" class="inner">
           <h2 style="margin-bottom:0;">
             Invitation to Create</h2>
             <h3 style="margin-top:0;">XRchive a series of XR storytelling experiences in place</h3>
