--- a/programs/constellations/index.html
+++ b/programs/constellations/index.html
@@ -46,14 +46,20 @@
     </header>
     <main>
       <section class="light">
-        <figure style="max-height:400px;overflow:hidden;"><img src="/images/heros/constellations-hero.png" alt="Constellations at PDX Winter Light Festival" /></figure>
+        <figure>
+          <img src="/images/heros/wlf-blue2022.png" alt="Constellations at PDX Winter Light Festival">
+        </figure>
+        
         <div class="inner">
           <h1>Constellations</h1>
           <h2>At Portland Winter Light Festival</h2>
 
           <h3>Weekend of Art-Tech Collaborative Creative Experiments:</h3>
           <p>CETI is convening a group of artists, technologists, architects, musicians, hackers, and engineers in January for a weekend of creative experiments at the CETI Lab at PSU - an exciting interdisciplinary creative jam to bring unique interactive light and sound pieces, immersive experiences, and performances to life.</p>
-          <p><strong>Where:</strong> at the CETI Lab at Portland State University. <br /><strong>When:</strong> Jan 21 - 23, 2022</p>
+          <p><strong>Where:</strong><br>
+             at the CETI Lab at Portland State University. <br /><br>
+            <strong>When:</strong><br>
+            Creative Collaborations Jan 21 - 23, 2022</p>
 
           <p>Constellations - a showcase and celebration of these magical interactive and immersive experiences will be shown as part of Portland's Winter Lights Festival 2022 Where: at FMH and satellite buildings at Portland State University. When: Feb 5, 2022.</p>
           <p>Register to create, troubleshoot, volunteer, participate</p>
@@ -64,7 +70,7 @@
         </div>
       </section>
       <section id="invitation" class="constellations">
-        <figure><img src="/images/heros/wlf-orb.png" alt="XRchive" /></figure>
+        <figure style="max-height:400px;overflow:hidden;"><img src="/images/heros/constellations-hero.png" alt="Constellations at PDX Winter Light Festival" /></figure>
         <div class="inner">
           <h2>Partners, Sponsors, and Donors</h2>
           <p>We would be grateful for sponsors  to fund the project and in-kind donations of food, materials, technology.  Please contact hello@ceti.institute to support this project. (CETI is a 501(c)3 nonprofit and donations are tax deductible).
