added new dates

--- a/programs/constellations/index.html
+++ b/programs/constellations/index.html
@@ -56,12 +56,17 @@
 
           <h3>Weekend of Art-Tech Collaborative Creative Experiments:</h3>
           <p>CETI is convening a group of artists, technologists, architects, musicians, hackers, and engineers in January for a weekend of creative experiments at the CETI Lab at PSU - an exciting interdisciplinary creative jam to bring unique interactive light and sound pieces, immersive experiences, and performances to life.</p>
+
+          <h3>Drop-in Session Friday December 10th, 2021 2-4pm at the CETI Lab @ PSU</h3>
+          <h3>More events!</h3>
           <p><strong>Where:</strong><br>
              at the CETI Lab at Portland State University. <br /><br>
             <strong>When:</strong><br>
             Creative Collaborations Jan 21 - 23, 2022</p>
 
-          <p>Constellations - a showcase and celebration of these magical interactive and immersive experiences will be shown as part of Portland's Winter Lights Festival 2022 Where: at FMH and satellite buildings at Portland State University. When: Feb 5, 2022.</p>
+          <p>Constellations - a showcase and celebration of these magical interactive and immersive experiences will be shown as part of Portland's Winter Lights Festival 2022
+            <p><strong>Where:</strong> at FMH and satellite buildings at Portland State University. 
+              <p><strong>When:</strong> Feb 5, 2022.</p>
           <p>Register to create, troubleshoot, volunteer, participate</p>
 
           <p><a href="https://forms.gle/6zQAwFkKAKgSq9PN6" class="button">Register</a></p>
