removed extra image

--- a/programs/constellations/index.html
+++ b/programs/constellations/index.html
@@ -71,7 +71,7 @@
       <section id="invitation" class="constellations">
         <figure>
           <img src="/images/heros/constellations-hero.png" alt="Constellations 22 at PDX Winter Light Festival" />
-          <img src="/images/heros/wlf-ceti-blue-green.png" alt="CETI creative experiments"/></figure>
+          </figure>
         <div class="inner">
           <h2>Partners, Sponsors, and Donors</h2>
           <p>We would be grateful for sponsors  to fund the project and in-kind donations of food, materials, technology.  Please contact hello@ceti.institute to support this project. (CETI is a 501(c)3 nonprofit and donations are tax deductible).
