made all three be on the screen

--- a/programs/constellations/index.html
+++ b/programs/constellations/index.html
@@ -46,8 +46,8 @@
     </header>
     <main>
       <section class="light">
-        <figure style="max-height:460px;overflow:hidden;background-position:100% 50%;">
-          <img src="/images/heros/threescreens.jpg" alt="Constellations 22 at PDX Winter Light Festival" /></figure>
+        <figure style="max-height:500px;overflow:hidden;">
+          <img src="/images/heros/threescreensv3.png" alt="Constellations 22 at PDX Winter Light Festival" /></figure>
       
         
         <div class="inner">
