added eventbrite button for exhibition

--- a/programs/constellations/index.html
+++ b/programs/constellations/index.html
@@ -56,10 +56,11 @@
 
 <p><strong>CETI</strong> is convening  a group of artists, technologists, architects, musicians, hackers, and engineers in January for a weekend of <strong>Art-Tech Collaborative Creative Experiments</strong> at the <strong>CETI Lab at PSU</strong> - an exciting interdisciplinary creative jam to bring unique  interactive light and sound pieces, immersive experiences, and performances to life.</p>
 <p><strong>Constellations</strong>, the resulting show of these magical interactive and immersive experiences, will be shown as part of <strong>Portland's Winter Lights Festival 2022</strong></p>
-<p><strong>Where:</strong></p>
-<p>At FMH at Portland State University. <a href="https://goo.gl/maps/32U97LKRFRmJaw7d7" target="_blank">1855 SW Broadway, Room 218</a></p>
+<p><strong>Where:</strong> At FMH at Portland State University. <a href="https://goo.gl/maps/32U97LKRFRmJaw7d7" target="_blank">1855 SW Broadway</a></p>
  
-<p><strong>When: Feb 5, 2022. 3pm - 9pmish</strong></p>
+<p><strong>When:</strong> Feb 5, 2022. 3pm - 9pm</p>
+Register for a time slot on EventBrite.
+<p><a class="button" href="https://ceti-constellations22.eventbrite.com/">Attend the Exhibition</a></p>
 
 
 <p>Register here to participate in the hackathon or show, to help, create, troubleshoot, volunteer, and participate</p>
