added homepage links

--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 									</div>
 								</section>
 									<section class="">
-										<figure><a href="/programs/xrchive"><img src="/images/heros/constellations-hero.png" alt="XRchive"></a></figure>
+										<figure><a href="/programs/constellations"><img src="/images/heros/constell2022v4.png" alt="Constellations"></a></figure>
 								<div class="inner">
 									<h2>Constellations</h2>
 									<h3>At the 2022 Portland Winter Light Festival</h3>
-									<a href="programs/constellations"><img src=""></a>
-									<p>CETI is convening  a group of artists, technologists, architects, musicians, hackers, and engineers in January for a weekend of creative experiments at the CETI Lab at PSU  - an exciting interdisciplinary creative jam to bring unique interactive light and sound pieces, immersive experiences, and performances to life.  </p>
-									<p><a href="programs/constellations/" class="button">Info</a></p>
+									<p><strong>Event Details</strong> Join CETI February 5th from 4pm to 10pm in the FMH building at 1855 SW Broadway, Portland OR. We will be showing a variety of light-based artworks inside the building as well as some light projections onto the park blocks in the back of the building.</p>
+									<p><a class="button" href="programs/constellations/" class="button">Info</a>
+										<a href="https://ceti-constellations22.eventbrite.com/" class="button">RSVP on EventBrite</a></p>
 								</div>
 								
 							</section>
