--- a/programs/constellations/index.html
+++ b/programs/constellations/index.html
@@ -59,7 +59,7 @@
 <p><strong>Where:</strong> At FMH at Portland State University. <a href="https://goo.gl/maps/32U97LKRFRmJaw7d7" target="_blank">1855 SW Broadway</a></p>
  
 <p><strong>When:</strong> Feb 5, 2022. 4pm - 10pm</p>
-Register for a time slot on EventBrite.
+Register on EventBrite to see the show and sign up for a time slot on EventBrite.
 <p><a class="button" href="https://ceti-constellations22.eventbrite.com/">Attend the Exhibition</a></p>
 
 
@@ -95,8 +95,7 @@ Register for a time slot on EventBrite.
           
           <h2>Previous Work</h2>
           <div><iframe src="https://player.vimeo.com/video/666150888?h=defbaa1cea" width="640" height="360" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>
-
-          <!-- <iframe src="https://player.vimeo.com/video/644497347?h=15237b2ed8&autoplay=1&title=0&byline=0&portrait=0" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe> -->
+            <p><a href="/wlf2020">Visit the Constellations 2020 page</a> for more details on our previous winter light festival event.</p>
           </div>
           <script src="https://player.vimeo.com/api/player.js"></script><br>
           
