--- a/wlf2020/index.html
+++ b/wlf2020/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <meta name="description" content="CETI, a creative technology non-profit, will be participating the the Portland Winter Light Festival February , 2022 at Portland State University in the FMH Building, Portland, OR." />
-    <title>CETI Winter Light Festival 2022 | Portland, OR</title>
+    <title>CETI Winter Light Festival 2020 | Portland, OR</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,|Source+Code+Pro:400,700&display=swap" rel="stylesheet" />
@@ -55,7 +55,7 @@
         </a>
         <!-- This animation found on a codepen by Patrick Young https://codepen.io/ISOgenesis/pen/zxEXPg -->
         <hgroup class="hackathon__header_group">
-          <h2 class="hackathon__subtitle">CONSTELLATIONS</h2>
+          <h2 class="hackathon__subtitle">CONSTELLATIONS 2020</h2>
           <h1 class="hackathon__title">CETI Collaborative Art+Tech Experiments</h1>
         </hgroup>
       </header>
