--- a/programs/constellations/index.html
+++ b/programs/constellations/index.html
@@ -60,7 +60,7 @@
  
 <p><strong>When:</strong> Feb 5, 2022. 4pm - 10pm</p>
 Register on EventBrite to attend the exhibition.
-<p><a class="button" href="https://ceti-constellations22.eventbrite.com/">EventBrite Registration</a></p>
+<p><a class="button" href="https://ceti-constellations22.eventbrite.com/">EventBrite Registration</a>&nbsp;&nbsp;<a href="constellations22-shimmeringecologies-cat.pdf" class="button">View Exhibition Catalog</a></p>
 
 
 <p>Register here to participate in the hackathon or show, to help, create, troubleshoot, volunteer, and participate</p>
