removed hackathon text

--- a/programs/constellations/index.html
+++ b/programs/constellations/index.html
@@ -54,17 +54,13 @@
           <h1>Constellations</h1>
           <h2>Collaborative Art-tech Experiments At the Portland Winter Lights Festival</h2>
 
-<p><strong>CETI</strong> is convening  a group of artists, technologists, architects, musicians, hackers, and engineers in January for a weekend of <strong>Art-Tech Collaborative Creative Experiments</strong> at the <strong>CETI Lab at PSU</strong> - an exciting interdisciplinary creative jam to bring unique  interactive light and sound pieces, immersive experiences, and performances to life.</p>
+
 <p><strong>Constellations</strong>, the resulting show of these magical interactive and immersive experiences, will be shown as part of <strong>Portland's Winter Lights Festival 2022</strong></p>
 <p><strong>Where:</strong> At FMH at Portland State University. <a href="https://goo.gl/maps/32U97LKRFRmJaw7d7" target="_blank">1855 SW Broadway</a>. Please bring proof of vaccination and a mask.</p>
  
 <p><strong>When:</strong> Feb 5, 2022. 4pm - 10pm</p>
 Register on EventBrite to attend the exhibition.
 <p><a class="button" href="https://ceti-constellations22.eventbrite.com/">EventBrite Registration</a>&nbsp;&nbsp;<a href="constellations22-shimmeringecologies-cat.pdf" class="button">View Exhibition Catalog</a></p>
-
-
-<p>Register here to participate in the hackathon or show, to help, create, troubleshoot, volunteer, and participate</p>
-          <p><a href="https://forms.gle/6zQAwFkKAKgSq9PN6" class="button" target="_blank">Register</a></p>
 
           <br /><br />
         </div>
@@ -84,6 +80,7 @@ Register on EventBrite to attend the exhibition.
       </section>
       <section class="light">
         <div class="inner">
+          <p><strong>CETI</strong> convened a group of artists, technologists, architects, musicians, hackers, and engineers in January for a weekend of <strong>Art-Tech Collaborative Creative Experiments</strong> at the <strong>CETI Lab at PSU</strong> - an exciting interdisciplinary creative jam to bring unique  interactive light and sound pieces, immersive experiences, and performances to life.</p>
           <h2>Participants</h2>
           <ul class="participants_list">
 
