--- a/programs/constellations/index.html
+++ b/programs/constellations/index.html
@@ -17,17 +17,17 @@
       })(window, document, "script", "dataLayer", "GTM-5SR4C6X")
     </script>
     <!-- End Google Tag Manager -->
-    <title>CETI | Constellations February 2022</title>
+    <title>CETI Constellations Shimmering Ecologies February 2022</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style" />
 
     <link rel="stylesheet" href="/css/style.css" />
     <meta property="og:title" content="Ceti" />
-    <meta property="og:description" content="CETI offers a vision for lifelong learning, professional development, transformation. We support a diverse and inclusive community of professionals, educators, students, entrepreneurs, researchers, and practitioners to successfully engage with and create the future." />
+    <meta property="og:description" content="CETI Constellations Shimmering Ecologies February 2022. In January 2022, a group of artists, technologists, architects, musicians, hackers, and engineers gathered for a weekend of Art-Tech Collaborative Creative Experiments at the CETI Lab at Portland State University — an exciting interdisciplinary creative jam to bring unique light and sound pieces, immersive experiences, and performances to life. CETI Constellations: Shimmering Ecologies is the result — these magical interactive and immersive installation experiences, shown as part of Portland's Winter Lights Festival 2022" />
     <meta property="og:image" content="http://ceti.institute/images/brand/ceti_logo-orange.png" />
     <meta property="og:url" content="https://ceti.institute" />
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="/images/heros/constell2022v4.png" />
     <meta property="og:site_name" content="CETI Institute" />
     <meta name="twitter:image:alt" content="CETI Institute" />
     <meta name="twitter:site" content="@ceti_institute" />
@@ -51,11 +51,14 @@
       
         
         <div class="inner">
-          <h1>Constellations</h1>
-          <h2>Collaborative Art-tech Experiments At the Portland Winter Lights Festival</h2>
+          <h1>CETI Constellations</h1>
+          <h2>Shimmering Ecologies</h2>
 
-
-<p><strong>Constellations</strong>, the resulting show of these magical interactive and immersive experiences, will be shown as part of <strong>Portland's Winter Lights Festival 2022</strong></p>
+<p>In January 2022, a group of artists, technologists, architects, musicians, hackers, and engineers
+gathered for a weekend of Art-Tech Collaborative Creative Experiments at the CETI Lab at Portland State University — an exciting interdisciplinary creative jam to bring unique light and sound pieces, immersive experiences, and performances to life.</p>
+<p><strong>Constellations:</strong> Shimmering Ecologiesis the result
+— these magical interactive and immersive installation
+experiences, shown as part of <strong>Portland's Winter Lights Festival 2022</strong></p>
 <p><strong>Where:</strong> At FMH at Portland State University. <a href="https://goo.gl/maps/32U97LKRFRmJaw7d7" target="_blank">1855 SW Broadway</a>. Please bring proof of vaccination and a mask.</p>
  
 <p><strong>When:</strong> Feb 5, 2022. 4pm - 10pm</p>
