added projects section

--- a/programs/constellations/index.html
+++ b/programs/constellations/index.html
@@ -62,8 +62,7 @@ experiences, shown as part of <strong>Portland's Winter Lights Festival 2022</st
 <p><strong>Where:</strong> At FMH at Portland State University. <a href="https://goo.gl/maps/32U97LKRFRmJaw7d7" target="_blank">1855 SW Broadway</a>. Please bring proof of vaccination and a mask.</p>
  
 <p><strong>When:</strong> Feb 5, 2022. 4pm - 10pm</p>
-Register on EventBrite to attend the exhibition.
-<p><a class="button" href="https://ceti-constellations22.eventbrite.com/">EventBrite Registration</a>&nbsp;&nbsp;<a href="constellations22-shimmeringecologies-cat.pdf" class="button">View Exhibition Catalog</a> &nbsp; <a href="map_constellations_02032022.pdf" class="button">View Map</a></p>
+<a href="constellations22-shimmeringecologies-cat.pdf" class="button">View Exhibition Catalog</a> &nbsp; <a href="map_constellations_02032022.pdf" class="button">View Map</a></p>
 
           <br /><br />
         </div>
@@ -83,7 +82,10 @@ Register on EventBrite to attend the exhibition.
       </section>
       <section class="light">
         <div class="inner">
-          <p><strong>CETI</strong> convened a group of artists, technologists, architects, musicians, hackers, and engineers in January for a weekend of <strong>Art-Tech Collaborative Creative Experiments</strong> at the <strong>CETI Lab at PSU</strong> - an exciting interdisciplinary creative jam to bring unique  interactive light and sound pieces, immersive experiences, and performances to life.</p>
+          <h2>Projects</h2>
+          <ul class="projects_list">
+
+          </ul>
           <h2>Participants</h2>
           <ul class="participants_list">
 
@@ -109,6 +111,7 @@ Register on EventBrite to attend the exhibition.
 
     <script src="/js/nav.js"></script>
     <script src="/js/script.js"></script>
+    <script src="projects.js"></script>
     <script src="participants.js"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
