--- a/programs/constellations/index.html
+++ b/programs/constellations/index.html
@@ -18,6 +18,8 @@
     </script>
     <!-- End Google Tag Manager -->
     <title>CETI Constellations Shimmering Ecologies February 2022</title>
+    <link rel="stylesheet" href="/libraries/modal-video/modal-video.min.css">
+    <link href="/libraries/lightbox/css/lightbox.min.css" rel="stylesheet">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;600;700&family=Source+Sans+Pro:wght@400;700&display=swap" rel="preload" as="style" />
@@ -56,7 +58,7 @@
 
 <p>In January 2022, a group of artists, technologists, architects, musicians, hackers, and engineers
 gathered for a weekend of Art-Tech Collaborative Creative Experiments at the CETI Lab at Portland State University — an exciting interdisciplinary creative jam to bring unique light and sound pieces, immersive experiences, and performances to life.</p>
-<p><strong>Constellations:</strong> Shimmering Ecologiesis the result
+<p><strong>Constellations:</strong> Shimmering Ecologies is the result
 — these magical interactive and immersive installation
 experiences, shown as part of <strong>Portland's Winter Lights Festival 2022</strong></p>
 <p><strong>Where:</strong> At FMH at Portland State University. <a href="https://goo.gl/maps/32U97LKRFRmJaw7d7" target="_blank">1855 SW Broadway</a>. Please bring proof of vaccination and a mask.</p>
@@ -108,7 +110,7 @@ experiences, shown as part of <strong>Portland's Winter Lights Festival 2022</st
       <div></div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-
+    <script src="/libraries/lightbox/js/lightbox-plus-jquery.min.js"></script>
     <script src="/js/nav.js"></script>
     <script src="/js/script.js"></script>
     <script src="projects.js"></script>
