--- a/programs/constellations/index.html
+++ b/programs/constellations/index.html
@@ -69,18 +69,11 @@ experiences, shown as part of <strong>Portland's Winter Lights Festival 2022</st
           <br /><br />
         </div>
       </section>
-      <section id="invitation" class="constellations">
+      <section id="invitation" class="light">
         <figure>
           <img src="/images/heros/constellations-hero.png" alt="Constellations 22 at PDX Winter Light Festival" />
           </figure>
-        <div class="inner">
-          <h2>Partners, Sponsors, and Donors</h2>
-          <p>We would be grateful for sponsors  to fund the project and in-kind donations of food, materials, technology.  Please contact hello@ceti.institute to support this project. (CETI is a 501(c)3 nonprofit and donations are tax deductible).
-
-          </p>
-          <p><a class="button light" href="mailto:hello@ceti.institute">Support the Project</a></p>
-          
-        </div>
+        
       </section>
       <section class="light">
         <div class="inner">
