edits to gof and constellations

--- a/programs/constellations/index.html
+++ b/programs/constellations/index.html
@@ -58,13 +58,11 @@
 
 <p>In January 2022, a group of artists, technologists, architects, musicians, hackers, and engineers
 gathered for a weekend of Art-Tech Collaborative Creative Experiments at the CETI Lab at Portland State University — an exciting interdisciplinary creative jam to bring unique light and sound pieces, immersive experiences, and performances to life.</p>
-<p><strong>Constellations:</strong> Shimmering Ecologies is the result
+<p><strong>Constellations:</strong> <em>Shimmering Ecologies</em> is the result
 — these magical interactive and immersive installation
-experiences, shown as part of <strong>Portland's Winter Lights Festival 2022</strong></p>
-<p><strong>Where:</strong> At FMH at Portland State University. <a href="https://goo.gl/maps/32U97LKRFRmJaw7d7" target="_blank">1855 SW Broadway</a>. Please bring proof of vaccination and a mask.</p>
+experiences, shown as part of <strong>Portland's Winter Lights Festival </strong>Feb 5, 2022 in the FMH building at Portland State University. 
  
-<p><strong>When:</strong> Feb 5, 2022. 4pm - 10pm</p>
-<a href="constellations22-shimmeringecologies-cat.pdf" class="button">View Exhibition Catalog</a> &nbsp; <a href="map_constellations_02032022.pdf" class="button">View Map</a></p>
+<p><a href="constellations22-shimmeringecologies-cat.pdf" class="button">Exhibition Catalog</a> &nbsp; <a href="map_constellations_02032022.pdf" class="button">Map</a></p>
 
           <br /><br />
         </div>
@@ -77,7 +75,7 @@ experiences, shown as part of <strong>Portland's Winter Lights Festival 2022</st
       </section>
       <section class="light">
         <div class="inner">
-          <h2>Projects</h2>
+          <h2>Artists + Works</h2>
           <ul class="projects_list">
 
           </ul>
