removed broken projects so I can publish today

--- a/techlab/index.html
+++ b/techlab/index.html
@@ -32,11 +32,11 @@
     <main>
       <section class="light">
         <figure style="max-height: 500px; overflow: hidden">
-          <img src="/images/heros/constell2022v4.png" alt="Constellations 22 at PDX Winter Light Festival" />
+          <img src="/images/heros/community-hero.png" alt="CETI Techlab" />
         </figure>
 
         <div class="inner">
-          <h1>CETI Lab</h1>
+          <h1>CETI Tech Lab</h1>
 
           <p>CETI workshops, trainings, and institutes offer opportunities for lifelong learning, professional development, skill-building, and career transformation. Our approach is participatory, inclusive, joyful, critical, and intersectional. We enthusiastically welcome a diverse motivated community, who are excited about relevant, impactful learning experiences in emerging technologies, and who are collaborative and generous in the engagement - willing to learn with and from, and willing to share experiences, expertise, and imagination.</p>
           <p>More details at: eventbrite page and on the CETI calendar.</p>
